B-F Sandbox Full-Backup/src/objects/Group_Promotion_Item__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Group_Promotion_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Banner__c</fullName>
        <label>Banner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Major__c</fullName>
        <label>Brand Major</label>
        <picklist>
            <picklistValues>
                <fullName>327 - EMERILS CLASSIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>328 - FETZER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>329 - BONTERRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>330 - FONTANA CANDIDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>331 - PACIFIC BAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>332 - MARIAH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>333 - Hopland Ranch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>334 - OBLIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>335 - BOXING ROO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>336 - TUACA LIQUEUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>337 - DIDGERIDOO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>338 - LITTLE BLACK DRESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>339 - WAKEFIELD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>340 - FONTANA FREDDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>341 - VIRGIN VINES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>342 - GALA ROUGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>344 - SUNDIAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>345 - FETZER COLDWATER CREEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>347 - STONYBROOK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>348 - LOW CARB ONE.X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>349 - FETZER PV PROMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>350 - ICY VODKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>351 - LBD VODKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>360 - GLENMORANGIE SCOTCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>361 - GLEN MORAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>363 - ARDBEG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>370 - L.LEMONADE MIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>371 - JD,GJ,SNGB FAMILY PK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>377 - GENTLEMAN JACK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>379 - JD &amp; COLA - GLASS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand_Minor__c</fullName>
        <label>Brand Minor</label>
        <picklist>
            <picklistValues>
                <fullName>327001 - EMERILS CLASSIC WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327002 - EMERILS CLASSIC RED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327064 - EMERILS CLASSIC CAB SAUV RSV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327071 - EMERILS CLASSIC RED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327072 - EMERILS CLASSIC WHITE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327073 - EMERILS CLASSIC BLUSH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327081 - EMERILS CLASSIC CHARDONNAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327082 - EMERILS CLASSIC CAB SAUV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327XXX - UNDEFINED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>328007 - FTZ CAB ORGNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>328008 - FTZ CHARD ORGNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>328009 - FTZ MERL ORGNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>328010 - FETZER MALBEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>328011 - FTZ PINOT GRIGIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>328014 - FTZ CAB/CHRD/MERL/PG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>328015 - FTZ CAB/CHARD/MERL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>328081 - FTZ  CHARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>328082 - FTZ  CABERNET SAUV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>328083 - FTZ  MERLOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>328084 - FTZ   PINOT NOIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>328085 - FTZ  VIOGNIER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>328086 - FTZ  FUME BLANC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>328087 - FTZ  GEWURZTRAMINER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>328088 - FTZ  WHITE ZINFANDEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>328089 - FTZ  J REISLING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32808A - FTZ  GAMAY BEAUJOLAIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32808B - FTZ  ZINFANDEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32808C - FTZ  ZIN ROSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32808D - FTZ  CHARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32808E - FTZ  CHENIN BLANC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Condition_Types__c</fullName>
        <label>Condition Types</label>
        <picklist>
            <picklistValues>
                <fullName>Bonus Quantity	ZB30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Off Premise $	ZB15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Off Premise %	ZB16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance On Premise $	ZB17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance On Premise %	ZB18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligible Banner / Mgmt Grp	ZB05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligible Distributor Banner	ZB05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligible Distributor	ZB06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligible Group    ZB05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusion Material	ZB71</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusion Retailer	ZB72</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA Off Premise $	ZB11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA Off Premise %	ZB12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA On Premise $	ZB13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA On Premise %	ZB14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Route to Mkt - Recovery $	ZB23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Route to Mkt - Recovery %	ZB24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visibility Off Premise $	ZB19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visibility Off Premise %	ZB20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visibility On Premise $	ZB21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visibility On Premise %	ZB22</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <description>Discount Amount per Case</description>
        <inlineHelpText>Discount Amount per Case</inlineHelpText>
        <label>Discount per Case</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <label>Distributor</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FE__c</fullName>
        <label>FE</label>
        <picklist>
            <picklistValues>
                <fullName>Need Values from R/3...</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spirits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group_Promotion__c</fullName>
        <label>Deal</label>
        <referenceTo>Group_Promotions__c</referenceTo>
        <relationshipLabel>Deal Items</relationshipLabel>
        <relationshipName>Group_Promotion_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <description>Vistex Item Number</description>
        <inlineHelpText>Vistex Item Number</inlineHelpText>
        <label>Item Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Code__c</fullName>
        <label>Legacy Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LumpSum__c</fullName>
        <label>LumpSum</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Brand__c</fullName>
        <label>Manufacturing Brand</label>
        <picklist>
            <picklistValues>
                <fullName>32700148606 - EMERILS CLASSIC WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32700248607 - EMERILS CLASSIC RED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32706447402 - CAB SAUV RSV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32707146102 - FETZER PREMIUM RE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32707146105 - FETZER VINTAGE RE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32707246103 - FETZER PREMIUM WH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32707246106 - FETZER VINTAGE WH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32707346136 - FETZ PREMIUM BLUSH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32708147404 - CHARDONNAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32708247403 - CAB SAUV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327XXX46104 - FETZ VINTAGE ROSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327XXX46138 - FETZ BURGUNDY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327XXX46139 - FETZ CHABLIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327XXX46157 - FETZER MIXED LABW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32800746911 - CAB ORGNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32800846912 - CHARD ORGNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32800946913 - MERL ORGNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32801046235 - MALBEC 27º</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32801146215 - PINOT GRIG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32801446223 - CAB/CHRD/MERL/PG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32801546200 - CAB/CHARD/MERL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32808146113 - CHARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32808146907 - HARVEST CHARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32808246112 - FTZ  CAB SAUV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32808246909 - HARVEST  CAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32808346114 - MERLOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32808346908 - HARVEST MERLOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32808446151 - PINOT NOIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32808546154 - VIOGNIER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32808646107 - FUME BLANC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ongoing__c</fullName>
        <defaultValue>8.25</defaultValue>
        <description>Ongoing Per - Case</description>
        <inlineHelpText>Ongoing Per Case</inlineHelpText>
        <label>Ongoing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Unit__c</fullName>
        <description>Units per Price</description>
        <inlineHelpText>Units per Price</inlineHelpText>
        <label>Units per Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Vision_Type__c</fullName>
        <label>Price Vision Type</label>
        <picklist>
            <picklistValues>
                <fullName>Everyday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maximum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Vision__c</fullName>
        <label>Price Vision</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Group_Promotion_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Material_Group_Number__c</fullName>
        <formula>Reference_Material_Group__r.Reference_Material_Group_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference Material Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Material_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference Material Group</description>
        <label>Reference Material Group</label>
        <referenceTo>Reference_Material_Group__c</referenceTo>
        <relationshipLabel>Deal Items</relationshipLabel>
        <relationshipName>Group_Promotion_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value_Type__c</fullName>
        <formula>IF( Group_Promotion__r.Rate_Per_Case__c   = True , &quot;Rate Per Case&quot;, &quot;Lump Sum&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vistex_Agreement_Number__c</fullName>
        <formula>Group_Promotion__r.Vistex_Agreement_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vistex Agreement Number</label>
        <type>Text</type>
    </fields>
    <label>Deal Item</label>
    <nameField>
        <displayFormat>GPI-{0}</displayFormat>
        <label>Group Promotion Item  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Items</pluralLabel>
    <recordTypes>
        <fullName>Group_Deal_Item</fullName>
        <active>true</active>
        <description>Group Deal Item for banner group</description>
        <label>Group Deal Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Group_Promotion_Item_Layout</fullName>
        <active>true</active>
        <label>Group Promotion Item Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outlet_Deal_Item</fullName>
        <active>true</active>
        <description>Outlet Deal Item specific layout</description>
        <label>Outlet Deal Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>